--- a/Recommender.ipynb
+++ b/Recommender.ipynb
@@ -2,124 +2,99 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "0429c8ec",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from bs4 import BeautifulSoup\n",
-    "import re \n",
-    "import requests\n",
-    "import pandas as pd\n",
-    "from tqdm.notebook import tqdm\n",
-    "from random import randint"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "c6a41b6e",
+   "execution_count": 10,
+   "id": "07302d3d-1fcc-4ec0-8b45-ec59d486583e",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "200"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|█████████████████████████████████████████████████████████████████████████████████████████████| 100/100 [00:10<00:00,  9.37it/s]\n"
+     ]
     }
    ],
    "source": [
-    "# importing libraries\n",
-    "\n",
-    "from bs4 import BeautifulSoup\n",
-    "import re \n",
+    "# Importing necessary libraries\n",
     "import requests\n",
+    "from bs4 import BeautifulSoup\n",
     "import pandas as pd\n",
-    "from tqdm.notebook import tqdm\n",
-    "from random import randint\n",
+    "from tqdm import tqdm\n",
     "\n",
-    "\n",
-    "# In[ ]:\n",
-    "\n",
-    "\n",
-    "# storing link in a variable\n",
+    "# URL for the billboard top 100 songs\n",
     "url = \"https://www.billboard.com/charts/hot-100\"\n",
-    "# downloading  html with a get request\n",
+    "\n",
+    "# Making a GET request to the URL\n",
     "response = requests.get(url)\n",
-    "# check response status code \n",
-    "response.status_code"
+    "\n",
+    "# Checking if the GET request was successful\n",
+    "if response.status_code == 200:\n",
+    "    # Parsing the contents of the URL\n",
+    "    soup = BeautifulSoup(response.content, 'html.parser')\n",
+    "\n",
+    "# Number of top 100 songs\n",
+    "top_100 = len(soup.select('h3.c-title.a-no-trucate'))\n",
+    "\n",
+    "# Empty lists to store song names and artists\n",
+    "songs = []\n",
+    "artists = []\n",
+    "\n",
+    "# Looping through the songs\n",
+    "for i in tqdm(range(top_100)):\n",
+    "    # Extracting song names and artists\n",
+    "    songs.append(soup.select('h3.c-title.a-no-trucate')[i].get_text(strip=True))\n",
+    "    artists.append(soup.select('span.c-label.a-font-primary-s')[i].get_text(strip=True))\n",
+    "\n",
+    "# Creating a DataFrame to store song names and artists\n",
+    "billboard_top100 = pd.DataFrame({'song':songs,'artist':artists})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "88375f89",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# parsing and storing the contents of the url call\n",
-    "billboardsoup = BeautifulSoup(response.content, 'html.parser')\n",
-    "top_100 = len(billboardsoup.select('h3.c-title.a-no-trucate'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "0e5ce7f2",
+   "execution_count": 11,
+   "id": "ab669e88-69e0-4536-9a67-6229fe7e3055",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c19edf718f924223b2b392e242c0953f",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/100 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "What song do you have in mind?:  the heros\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Oh well, my bad, but that song is not hot. Anyway! Good for you for not following the crowds!\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Want to try again? [y/n]:  travis\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Oh well, your bad, this is an awesome recommender\n"
+     ]
     }
    ],
-   "source": [
-    "song = []\n",
-    "artist = []\n",
-    "\n",
-    "for i in tqdm(range(top_100)):\n",
-    "    song.append(billboardsoup.select('h3.c-title.a-no-trucate')[i].get_text(strip=True))\n",
-    "    artist.append(billboardsoup.select('span.c-label.a-font-primary-s')[i].get_text(strip=True))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "7e16ea75",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "billboard_top100 = pd.DataFrame({'song':song,'artist':artist})\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "84a69793",
-   "metadata": {},
-   "outputs": [],
    "source": [
     "def suggester():\n",
+    "    # Take the input of song and lowercase it, then remove all spaces\n",
     "    song = str(input(\"What song do you have in mind?: \").lower().replace(\" \", ''))\n",
-    "    # check hot 100\n",
+    "    # Check if the song is in the billboard top 100 chart by filtering the dataframe \n",
     "    check = billboard_top100[billboard_top100['song'].str.lower().str.replace(\" \",\"\").str.contains(song)]\n",
-    "    # get index\n",
+    "\n",
+    "    # Get the index of the song\n",
     "    index = check.index.tolist()\n",
+    "\n",
+    "    # If the song is not in the billboard top 100 chart, give a message and ask the user to try again or not\n",
     "    if len(check) == 0:\n",
     "        print(\"Oh well, my bad, but that song is not hot. Anyway! Good for you for not following the crowds!\")\n",
     "        song2 = str(input(\"Want to try again? [y/n]: \")).lower().replace(\" \", '')\n",
@@ -129,8 +104,9 @@
     "        else:\n",
     "            print('Oh well, your bad, this is an awesome recommender')\n",
     "    else:\n",
+    "        # If the song is in the billboard top 100 chart, ask the user if it's the song he/she had in mind\n",
     "        answer1 = input(\"Are you thinking about '\" + billboard_top100.song[index].values[0] + \"' by '\" + billboard_top100.artist[index].values[0] + \"'? [y/n]: \")\n",
-    "    #make a song suggestion\n",
+    "        # If the answer is yes, make a random song suggestion and ask the user if he/she wants to try again or not\n",
     "        if answer1.lower() == 'y':\n",
     "            suggestion = billboard_top100.sample().index.tolist()\n",
     "            print(\"Then listen to '\" + billboard_top100['song'][suggestion].item() + \"' by '\" + billboard_top100['artist'][suggestion].item() + \"' I think you'll like it.\")\n",
@@ -140,6 +116,7 @@
     "                suggester()\n",
     "            else:\n",
     "                print('Oh well, your bad, this is an awesome recommender')\n",
+    "        # If the answer is no, give a message and ask the user to try again or not\n",
     "        else:\n",
     "            print(\"That song is not hot, good for you for not following the crowds!\")\n",
     "            song2 = str(input(\"Want to try again? [y/n]: \")).lower().replace(\" \", '')\n",
@@ -148,14 +125,14 @@
     "                suggester()\n",
     "            else:\n",
     "                print('Oh well, your bad, this is an awesome recommender')\n",
-    "            \n",
+    "        \n",
     "suggester()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d1b84622",
+   "id": "56879df9",
    "metadata": {},
    "outputs": [],
    "source": []
