--- a/The MVP.ipynb
+++ b/The MVP.ipynb
@@ -3,123 +3,99 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "1038604f",
+   "id": "7eeaf02d-fef9-421e-a689-8ced5a743d40",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|█████████████████████████████████████████████████████████████████████████████████████████████| 100/100 [00:10<00:00,  9.70it/s]\n"
+     ]
+    }
+   ],
    "source": [
-    "# importing libraries\n",
-    "\n",
-    "from bs4 import BeautifulSoup\n",
-    "import re \n",
+    "# Importing necessary libraries\n",
     "import requests\n",
+    "from bs4 import BeautifulSoup\n",
     "import pandas as pd\n",
-    "from tqdm.notebook import tqdm\n",
-    "from random import randint"
+    "from tqdm import tqdm\n",
+    "\n",
+    "# URL for the billboard top 100 songs\n",
+    "url = \"https://www.billboard.com/charts/hot-100\"\n",
+    "\n",
+    "# Making a GET request to the URL\n",
+    "response = requests.get(url)\n",
+    "\n",
+    "# Checking if the GET request was successful\n",
+    "if response.status_code == 200:\n",
+    "    # Parsing the contents of the URL\n",
+    "    soup = BeautifulSoup(response.content, 'html.parser')\n",
+    "\n",
+    "# Number of top 100 songs\n",
+    "top_100 = len(soup.select('h3.c-title.a-no-trucate'))\n",
+    "\n",
+    "# Empty lists to store song names and artists\n",
+    "songs = []\n",
+    "artists = []\n",
+    "\n",
+    "# Looping through the songs\n",
+    "for i in tqdm(range(top_100)):\n",
+    "    # Extracting song names and artists\n",
+    "    songs.append(soup.select('h3.c-title.a-no-trucate')[i].get_text(strip=True))\n",
+    "    artists.append(soup.select('span.c-label.a-font-primary-s')[i].get_text(strip=True))\n",
+    "\n",
+    "# Creating a DataFrame to store song names and artists\n",
+    "billboard_top100 = pd.DataFrame({'song':songs,'artist':artists})"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "2c5a96a7",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "200"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# storing link in a variable\n",
-    "url = \"https://www.billboard.com/charts/hot-100\"\n",
-    "# downloading  html with a get request\n",
-    "response = requests.get(url)\n",
-    "# check response status code \n",
-    "response.status_code"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "b4b8b73c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# parsing and storing the contents of the url call\n",
-    "billboardsoup = BeautifulSoup(response.content, 'html.parser')\n",
-    "top_100 = len(billboardsoup.select('h3.c-title.a-no-trucate'))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "6e8ac1f6",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a9ffa837ee4a4aa595feb108eb8870dd",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/100 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "# looping the songs/artists\n",
-    "song = []\n",
-    "artist = []\n",
-    "\n",
-    "for i in tqdm(range(top_100)):\n",
-    "    song.append(billboardsoup.select('h3.c-title.a-no-trucate')[i].get_text(strip=True))\n",
-    "    artist.append(billboardsoup.select('span.c-label.a-font-primary-s')[i].get_text(strip=True))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "e91df174",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "billboard_top100 = pd.DataFrame({'song':song,'artist':artist})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
    "id": "105db94a",
    "metadata": {},
    "outputs": [
     {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "What song do you have in mind?:  n\n",
+      "Are you thinking about 'Anti-Hero' by 'Taylor Swift'? [y/n]:  y\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "What song do you have in mind?: aLL I WANT FOR CHRISTMAS\n",
-      "Oh well, my bad, but that song is not hot. Anyway! Good for you for not following the crowds!\n",
-      "Want to try again? [y/n]: N\n",
+      "Then listen to 'You Proof' by 'Morgan Wallen' I think you'll like it.\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Want to try again? [y/n]:  n\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Oh well, your bad, this is an awesome recommender\n"
      ]
     }
    ],
    "source": [
     "def suggester():\n",
+    "    # Take the input of song and lowercase it, then remove all spaces\n",
     "    song = str(input(\"What song do you have in mind?: \").lower().replace(\" \", ''))\n",
-    "    # check hot 100\n",
+    "    # Check if the song is in the billboard top 100 chart by filtering the dataframe \n",
     "    check = billboard_top100[billboard_top100['song'].str.lower().str.replace(\" \",\"\").str.contains(song)]\n",
-    "    # get index\n",
+    "\n",
+    "    # Get the index of the song\n",
     "    index = check.index.tolist()\n",
+    "\n",
+    "    # If the song is not in the billboard top 100 chart, give a message and ask the user to try again or not\n",
     "    if len(check) == 0:\n",
     "        print(\"Oh well, my bad, but that song is not hot. Anyway! Good for you for not following the crowds!\")\n",
     "        song2 = str(input(\"Want to try again? [y/n]: \")).lower().replace(\" \", '')\n",
@@ -129,8 +105,9 @@
     "        else:\n",
     "            print('Oh well, your bad, this is an awesome recommender')\n",
     "    else:\n",
+    "        # If the song is in the billboard top 100 chart, ask the user if it's the song he/she had in mind\n",
     "        answer1 = input(\"Are you thinking about '\" + billboard_top100.song[index].values[0] + \"' by '\" + billboard_top100.artist[index].values[0] + \"'? [y/n]: \")\n",
-    "    #make a song suggestion\n",
+    "        # If the answer is yes, make a random song suggestion and ask the user if he/she wants to try again or not\n",
     "        if answer1.lower() == 'y':\n",
     "            suggestion = billboard_top100.sample().index.tolist()\n",
     "            print(\"Then listen to '\" + billboard_top100['song'][suggestion].item() + \"' by '\" + billboard_top100['artist'][suggestion].item() + \"' I think you'll like it.\")\n",
@@ -140,6 +117,7 @@
     "                suggester()\n",
     "            else:\n",
     "                print('Oh well, your bad, this is an awesome recommender')\n",
+    "        # If the answer is no, give a message and ask the user to try again or not\n",
     "        else:\n",
     "            print(\"That song is not hot, good for you for not following the crowds!\")\n",
     "            song2 = str(input(\"Want to try again? [y/n]: \")).lower().replace(\" \", '')\n",
@@ -148,7 +126,7 @@
     "                suggester()\n",
     "            else:\n",
     "                print('Oh well, your bad, this is an awesome recommender')\n",
-    "            \n",
+    "        \n",
     "suggester()"
    ]
   },
